# rag_uncertainty

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  requirements.txt
rag_pipeline/: data.py  demo_call.py  input_query.py  pipeline.py  pipeline_utils.py  rag_pipeline.py  retrieve.py  uncertainty_estimation.py
src/rag_pipeline/: atomic_facts.py  data.py  demos.json  pipeline.py  pipeline_utils.py  retrievers.py  safe_rater.py  uncertainty_estimation.py
src/rag_uncertainty/: analysis.ipynb  atomic_facts.py  data_loader.py  eval.py  merge_results.py  pipeline.py  pipeline_utils.py  questions.json  rafe.py  retrievers.py  safe.py
