[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_pipeline"
version = "0.1.0"
description = "RAG pipeline with uncertainty and SAFE evaluation"
requires-python = "==3.12.12"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rag_pipeline"]
