[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_uncertainty"
version = "0.1.0"
description = "Uncertainty Evaluation of RAG"
authors = [
    {name = "Fynn Gerding", email = "fynn.gerding@ru.nl"},
    {name = "Piotr Sutkowski", email = "piotr.sutkowski@ru.nl"},
    {name = "Teun Hanraets", email = "teun.hanraets@ru.nl"},
]

requires-python = "==3.12.12"
dependencies = [
    "datasets==4.3.0",
    "tqdm==4.67.1",
    "torch==2.9.0",
    "transformers==4.57.1",
    "spacy==3.8.8",
    "nltk==3.9.2",
    "rank-bm25==0.2.2",
    "numpy==2.3.4",
    "TruthTorchLM==0.1.17",
    "bm25s==0.2.14",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rag_uncertainty"]
